welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:39: error: not found: value YELLOW
  setCouleurBrosse(YELLOW)
                   ^FlowerPot:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerPot'
override def run() {
             ^